# Customized_Web_Chatbot

./: .gitignore  Project_Details.txt  main.py  pyproject.toml
Notebooks/: test.ipynb  workflow.ipynb
src/: Agent.py  AgentApp.py  app.py  chatbot.py  crawler.py  document_generator.py  markdown_cleaner.py  run.py  test.py  text_splitter.py  vector_store.py
