[project]
name = "asl-web-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-classic>=1.0.3",
    "langchain-core>=1.2.19",
    "langchain-mistralai>=1.1.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ruff>=0.15.6",
    "tavily>=1.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E501"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
